# transport-deluxe

./: .gitignore  .pre-commit-config.yaml  MCP_INTEGRATION_PLAN.md  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  update_margin.py
.devcontainer/: devcontainer.json  setup-ports.sh
.github/: copilot-instructions.md
.github/agents/: git-pusher.agent.md  mcp-operator.agent.md  product-manager.agent.md  security-reviewer.agent.md
.github/instructions/: architecture.instructions.md  configuration-service.instructions.md  mcp-tools.instructions.md  workflow-engine.instructions.md
.github/skills/postgresql-code-review/: SKILL.md
.github/skills/python-mcp-server-generator/: SKILL.md
.github/skills/receiving-code-review/: SKILL.md
.github/skills/sql-optimization/: SKILL.md
.github/skills/test-driven-development/: SKILL.md
.specify/: feature.json  init-options.json
.specify/extensions/: .registry
.specify/extensions/.cache/: catalog-ebf165086500aab1-metadata.json  catalog-ebf165086500aab1.json  catalog-metadata.json
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
backup/: postgres_dump.sql
base_margin_config/: Dockerfile
base_margin_config/tests/: conftest.py  test_get.py  test_list.py  test_resolve.py
business/: README.md
business/adjustments/: base_cost_adjustment.md  customer_cost_adjustment.md  driver_tariff_adjustment.md  lead_time_adjustment.md  stochastic_adjustment.md  truck_complexity_adjustment.md
business/configurations/: base_margin_configuration.md  customer_cost_week_day_configuration.md  driver_tariff_configuration.md  fuel_cost_configuration.md  lead_time_configuration.md  stochastic_margin_configuration.md  truck_complexity_margin_configuration.md
business/entities/: README.md  all_in_cost.md  all_in_margin.md  customer.md  load.md  prediction.md  route.md  truck_type.md  user.md
business/interactions/: README.md  cost_estimation.md  margin_calculation.md  price_calculation.md
business/resources/: README.md  configuration_policy.md  distance_service.md  distance_service.py
casdoor/: init_data.json
driver_tariff_config/: .dockerignore  README.md  pyproject.toml
driver_tariff_config/src/: main.py
driver_tariff_config/src/tools/: db.py
driver_tariff_config/tests/: conftest.py  test_create.py  test_resolve.py
external_services/casdoor/: init_data.json
external_services/pgadmin/: servers.json
fuel_cost_config/: Dockerfile  alembic.ini  pyproject.toml
fuel_cost_config/src/: main.py
fuel_cost_config/tests/: test_get.py  test_list.py
lead_time_config/: Dockerfile
lead_time_config/tests/: conftest.py  test_create.py  test_get.py  test_update.py
local_services/base_margin_config/: README.md  alembic.ini  pyproject.toml
local_services/base_margin_config/src/: main.py
local_services/base_margin_config/src/migrations/versions/: 001_initial.py
local_services/base_margin_config/src/modules/base_margin_config/: exceptions.py  mcp_server.py  mcp_tools.py  models.py  repo.py  router.py  service.py
local_services/base_margin_config/src/modules/base_margin_config/models/: __init__.py  dao.py  dto.py
local_services/base_margin_config/src/tools/: admin_auth.py  auth.py  db.py
local_services/base_margin_config/tests/: conftest.py  test_auth.py  test_constraints.py  test_create.py  test_list.py  test_mcp_tools.py  test_resolve.py  test_update.py
local_services/costing_engine/: Dockerfile  README.md  pyproject.toml
local_services/costing_engine/src/: main.py
local_services/costing_engine/src/migrations/: env.py
local_services/costing_engine/src/migrations/versions/: 001_initial.py
local_services/costing_engine/src/modules/costing/: admin.py  models.py  router.py  service.py  steps.py
local_services/costing_engine/tests/: conftest.py  test_estimate.py
local_services/driver_tariff_config/: pyproject.toml
local_services/driver_tariff_config/src/: main.py
local_services/driver_tariff_config/tests/: conftest.py  test_auth.py  test_create.py  test_get.py  test_list.py  test_mcp_tools.py  test_resolve.py  test_update.py
local_services/fuel_cost_config/: README.md  pyproject.toml
local_services/fuel_cost_config/src/: main.py
local_services/fuel_cost_config/tests/: conftest.py  test_auth.py  test_create.py  test_get.py  test_list.py  test_mcp_tools.py  test_resolve.py  test_update.py
local_services/lead_time_config/: pyproject.toml
local_services/lead_time_config/src/: main.py
local_services/lead_time_config/tests/: conftest.py  test_auth.py  test_constraints.py  test_create.py  test_get.py  test_list.py  test_mcp_tools.py  test_resolve.py  test_update.py
local_services/margin_engine/: pyproject.toml
local_services/margin_engine/src/: main.py
local_services/margin_engine/tests/: conftest.py  test_estimate.py
local_services/pricing_engine/: Dockerfile  pyproject.toml
local_services/pricing_engine/src/: main.py
local_services/pricing_engine/tests/: conftest.py  test_estimate.py
local_services/transport_deluxe_core/: Dockerfile  pyproject.toml
local_services/transport_deluxe_core/src/: main.py
local_services/transport_deluxe_core/src/modules/reports/: models.py  repo.py  router.py  service.py
local_services/transport_deluxe_core/tests/: conftest.py  test_breakdown.py
persistence/pgadmin/: pgadmin4.db
persistence/pgadmin/sessions/: ac1449f3-a207-4562-bc71-11bf3b355e94  cdab7cb5-f37e-4e27-b27d-8b9def4f4378
scripts/: get_token.py  test_distance_service.py  test_nominatim.py  test_valhalla.py  verify_token.py
scripts/postgres_init/: 01_init.sh
specs/001-user-auth-authz/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-user-auth-authz/checklists/: requirements.md
specs/001-user-auth-authz/contracts/: auth-api.md
specs/002-fuel-cost-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+2062 files in other folders)
