[project]
name = "transport-deluxe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fuel-cost-config",
    "driver-tariff-config",
    "base-margin-config",
]

[tool.uv.sources]
fuel-cost-config = { path = "fuel_cost_config", editable = true }
driver-tariff-config = { path = "driver_tariff_config", editable = true }
base-margin-config = { path = "base_margin_config", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "fuel_cost_config.tests.*",
    "driver_tariff_config.tests.*",
    "base_margin_config.tests.*",
    "tests.*"
]
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "fuel_cost_config.src.modules.fuel_cost_config.admin",
    "driver_tariff_config.src.modules.driver_tariff_config.admin",
    "base_margin_config.src.modules.base_margin_config.admin",
    "fuel_cost_config.src.tools.admin_auth",
    "driver_tariff_config.src.tools.admin_auth",
    "base_margin_config.src.tools.admin_auth"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "pytest_asyncio.*",
    "pytest.*",
    "sqladmin.*",
    "wtforms.*",
    "jose.*"
]
ignore_missing_imports = true

[tool.pyright]
extraPaths = ["fuel_cost_config", "driver_tariff_config"]
