[project]
name = "transport-deluxe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fuel-cost-config",
    "driver-tariff-config",
    "base-margin-config",
    "lead-time-config",
    "costing-engine",
    "margin-engine",
]

[tool.uv.sources]
fuel-cost-config = { path = "local_services/fuel_cost_config", editable = true }
driver-tariff-config = { path = "local_services/driver_tariff_config", editable = true }
base-margin-config = { path = "local_services/base_margin_config", editable = true }
lead-time-config = { path = "local_services/lead_time_config", editable = true }
costing-engine = { path = "local_services/costing_engine", editable = true }
margin-engine = { path = "local_services/margin_engine", editable = true }

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
]


[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = [
    "fuel_cost_config.tests.*",
    "driver_tariff_config.tests.*",
    "base_margin_config.tests.*",
    "lead_time_config.tests.*",
    "costing_engine.tests.*",
    "margin_engine.tests.*",
    "tests.*"
]
disallow_untyped_defs = false
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
module = [
    "fuel_cost_config.src.modules.fuel_cost_config.admin",
    "driver_tariff_config.src.modules.driver_tariff_config.admin",
    "base_margin_config.src.modules.base_margin_config.admin",
    "lead_time_config.src.modules.lead_time_config.admin",
    "costing_engine.src.modules.costing.admin",
    "margin_engine.src.modules.margin.admin",
    "fuel_cost_config.src.tools.admin_auth",
    "driver_tariff_config.src.tools.admin_auth",
    "base_margin_config.src.tools.admin_auth",
    "lead_time_config.src.tools.admin_auth"
]
ignore_errors = true

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "pytest_asyncio.*",
    "pytest.*",
    "sqladmin.*",
    "wtforms.*",
    "jose.*"
]
ignore_missing_imports = true

[tool.pyright]
extraPaths = [
    "local_services/fuel_cost_config",
    "local_services/driver_tariff_config",
    "local_services/base_margin_config",
    "local_services/lead_time_config",
    "local_services/costing_engine",
    "local_services/margin_engine"
]
