[project]
name = "base-margin-config"
version = "0.1.0"
description = "Base Margin Configuration Service"
requires-python = ">=3.14"
dependencies = [
    "sqladmin",
    "itsdangerous",


    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlmodel>=0.0.21",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "anyio[trio]>=4.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.fastapi]
entrypoint = "src.main:app"
